--- a/index.html
+++ b/index.html
@@ -1,56 +1,115 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Sorry 💔</title>
+<meta charset="UTF-8">
+<title>Sorry Sadaf</title>
+
 <style>
+*{
+  box-sizing:border-box;
+}
 body{
   margin:0;
   height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  font-family:Arial;
-  transition:0.5s;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg,#ff9a9e,#fad0c4);
+  transition: background 1s;
+  overflow:hidden;
 }
+
 .card{
-  background:white;
-  padding:30px;
-  border-radius:15px;
+  background: rgba(255,255,255,0.95);
+  padding:35px;
+  border-radius:20px;
   text-align:center;
+  width:85%;
+  max-width:360px;
+  box-shadow:0 20px 40px rgba(0,0,0,0.2);
+  animation: pop 1s ease;
 }
+
+h1{
+  margin-bottom:10px;
+  color:#ff4d6d;
+  font-size:28px;
+}
+
+p{
+  font-size:16px;
+  color:#333;
+  min-height:60px;
+  line-height:1.5;
+}
+
 button{
-  padding:10px 20px;
+  margin-top:20px;
+  padding:12px 25px;
   font-size:16px;
   border:none;
-  border-radius:8px;
+  border-radius:25px;
+  background:#ff4d6d;
+  color:white;
   cursor:pointer;
+  transition:0.3s;
+}
+
+button:hover{
+  transform:scale(1.1);
+  background:#ff2e55;
+}
+
+@keyframes pop{
+  0%{transform:scale(0.7); opacity:0;}
+  100%{transform:scale(1); opacity:1;}
 }
 </style>
 </head>
+
 <body id="body">
 
 <div class="card">
-  <h1 id="msg">I'm Really Sorry 😔</h1>
-  <p id="sub">I didn’t mean to hurt you.</p>
+  <h1>Sadaf</h1>
+  <p id="text">
+    You are not just my sister,<br>
+    you are my best friend.
+  </p>
   <button onclick="next()">Next ➡️</button>
 </div>
 
 <script>
-let i=0;
-const styles=[
-  {bg:'linear-gradient(135deg,#ff9a9e,#fad0c4)',msg:'I’m Really Sorry 😔',sub:'I didn’t mean to hurt you.'},
-  {bg:'linear-gradient(135deg,#a18cd1,#fbc2eb)',msg:'Sorry From My Heart 💗',sub:'Please forgive me.'},
-  {bg:'linear-gradient(135deg,#f6d365,#fda085)',msg:'Still Saying Sorry 🥺',sub:'You matter to me.'},
-  {bg:'linear-gradient(135deg,#84fab0,#8fd3f4)',msg:'Last One… Sorry ❤️',sub:'Hope you smile now.'}
+let i = 0;
+
+const pages = [
+  {
+    bg:"linear-gradient(135deg,#ff9a9e,#fad0c4)",
+    text:"You are not just my sister, you are my best friend."
+  },
+  {
+    bg:"linear-gradient(135deg,#a18cd1,#fbc2eb)",
+    text:"Sometimes I say things without thinking… and I know that hurts."
+  },
+  {
+    bg:"linear-gradient(135deg,#f6d365,#fda085)",
+    text:"But my respect and care for you never changes."
+  },
+  {
+    bg:"linear-gradient(135deg,#84fab0,#8fd3f4)",
+    text:"You understand me like no one else does."
+  },
+  {
+    bg:"linear-gradient(135deg,#fccb90,#d57eeb)",
+    text:"I’m really sorry, Sadaf. Please forgive me."
+  }
 ];
 
 function next(){
-  i=(i+1)%styles.length;
-  body.style.background=styles[i].bg;
-  msg.innerText=styles[i].msg;
-  sub.innerText=styles[i].sub;
+  i = (i + 1) % pages.length;
+  body.style.background = pages[i].bg;
+  text.innerText = pages[i].text;
 }
-body.style.background=styles[0].bg;
 </script>
 
 </body>
